# tree-sitter-rush

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  dprint.json  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-rush.pc.in
bindings/c/tree_sitter/: tree-sitter-rush.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_rush/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRushTests/: TreeSitterRushTests.swift
queries/rush/: highlights.scm  indents.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
