[package]
name = "tree-sitter-rush"
version = "0.2.0"
authors = ["RubixDev <silas.groh@t-online.de>"]
autoexamples = false
categories = ["parser-implementations", "parsing", "text-editors"]
edition = "2021"
keywords = ["incremental", "parsing", "tree-sitter", "rush"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rush-rs/tree-sitter-rush"
description = "rush grammar for tree-sitter"

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
    "tree-sitter.json",
    "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
